--- a/pollapp/build.gradle
+++ b/pollapp/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation("org.hibernate.orm:hibernate-core:7.1.1.Final")
     implementation("jakarta.persistence:jakarta.persistence-api:3.2.0")
     implementation("com.h2database:h2:2.3.232")
+
+    //Jedis
+    implementation("redis.clients:jedis:6.2.0")
 }
 
 tasks.named('test') {
