--- a/pollapp/src/main/resources/application.properties
+++ b/pollapp/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+spring.data.redis.host=redis
+spring.data.redis.port=6379
